--- a/javascript-es6/public/index.html
+++ b/javascript-es6/public/index.html
@@ -3,8 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>JS - ES6+</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <form id="repo-form">
+        <input type="text" name="repository" />
+        <button type="submit">Adicionar</button>
+    </form>
+
+    <ul id="repo-list">
+        <li>
+            <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" alt="">
+            <strong>rocketseat.com.br</strong>
+            <p>Tire a sua ideia do papel e dê vida à sua startup.</p>
+            <a href="http://github.com/rocketseat/rocketseat.com.br">Acessar</a>
+        </li>
+        <li>
+            <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" alt="">
+            <strong>rocketseat.com.br</strong>
+            <p>Tire a sua ideia do papel e dê vida </p>
+            <a href="http://github.com/rocketseat/rocketseat.com.br">Acessar</a>
+        </li>
+    </ul>
     <script src="./bundle.js"></script>
 </body>
 </html>
