--- a/javascript-es6/public/index.html
+++ b/javascript-es6/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JS - ES6+</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/./style.css">
 </head>
 <body>
     <form id="repo-form">
